# ppkg

./: .markdownlint.json  AppRun.c  CMakeLists.txt  Dockerfile.alpine  Dockerfile.alpine.loong64  Dockerfile.alpine.loongarch64  Dockerfile.archlinux.loong64  Dockerfile.archlinux.loongarch64  Dockerfile.debian.loong64  Dockerfile.openeuler  Dockerfile.openeuler.loongarch64  Dockerfile.ubuntu  PKGBUILD  README.md  build-core.sh  build.sh  check-if-has-dynamic-section.c  install.sh  libkrb5.yml  list-dynamic-section.c  list-section-names.c  log.txt  mono.yml  pack-ppkg-core  phases.d2  phases.dot  phases.svg.sh  ppkg  ppkg-compare-versions-with-brew  ppkg-do12345  ppkg-gen-github-workflows  ppkg-install  ppkg-vars  ppkg-wrapper-c++.c  ppkg-wrapper-cc.c  ppkg-wrapper-objc.c  ppkg-zsh-completion  print-interpreter-if-present.c  print-needed-if-present.c  print-rpath-if-present.c  (+21 more)
.github/: build-core.sh
.github/workflows/: alpine.yml  alpine.yml.bak  alpinelinux.yml  archlinux.yml  archlinux.yml.bak  build-core-linux-manually.yml  build-core-linux-manully.yml  build-core.sh  centos.yml  centos.yml.bak  cygwin.yml  cygwin.yml.bak  debian.yml  debian.yml.bak  dragonflybsd.yml  fedora.yml  fedora.yml.bak  freebsd.yml  freebsd.yml.bak  gentoo.yml  gentoo.yml.bak  macos-brew.yml  macos-vcpkg.yml  macos.yml  macos.yml.bak  manjaro.yml  manjaro.yml.bak  midnightbsd.yml  mint.yml  mint.yml.bak  msys2.yml  msys2.yml.bak  netbsd.yml  netbsd.yml.bak  openbsd.yml  openbsd.yml.bak  openeuler.yml  opensuse-leap.yml  opensuse-leap.yml.bak  opensuse.yml  (+16 more)
cmake/: FindCURL.cmake
core/: build-core.sh  file-magic.c  fonts.conf  list-section-names.c  read-first-n-bytes.c  rmdir-if-empty.c  sed-in-place.c  uppm-shim-apk  uppm-shim-apt  uppm-shim-brew  uppm-shim-mport  uppm-shim-pkg  uppm-shim-pkg_add  uppm-shim-pkg_omnios  uppm-shim-pkgin  uppm-shim-pkgman  wrapper-target-cc-test.sh  wrapper-template.c
core/elftools/: check-if-has-dynamic-section.c  file-magic.c  list-elf-files.c  list-section-names.c  list-sections.c  print-interpreter-if-present.c  print-interpreter.c  print-needed-if-present.c  print-needed.c  print-rpath-if-present.c  print-rpath.c  print-soname-if-present.c  print-soname.c  print-string-tables.c
core/wrappers/: wrapper-native-c++.c  wrapper-native-cc.c  wrapper-native-objc.c  wrapper-target-c++.c  wrapper-target-cc-test-on-linux.sh  wrapper-target-cc-test-on-macos.sh  wrapper-target-cc.c  wrapper-target-objc.c  zig-ar.c  zig-c++.c  zig-cc.c  zig-ranlib.c
docker/: alpine  ubuntu
src/: about.c  buildinfo.c  bundle.c  check.c  cleanup.c  config-SSL_CERT_FILE.c  config.h.in  copy.c  depends.c  download.c  env.c  error.c  examine-file-extension-from-url.c  examine-file-name-from-url.c  examine-file-type-from-url.c  fetch-from-git.c  fetch.c  formula-bat.c  formula-cat.c  formula-edit.c  formula-load.c  formula-locate.c  formula-lookup.c  formula-parse.c  formula-path.c  formula-repo-add.c  formula-repo-change.c  formula-repo-config-write.c  formula-repo-create.c  formula-repo-del.c  formula-repo-info.c  formula-repo-list-printf.c  formula-repo-list-update.c  formula-repo-list.c  formula-repo-lookup.c  formula-repo-parse.c  formula-repo-remove.c  formula-repo-sync.c  formula-repo-update.c  formula-view.c  (+54 more)
src/core/: base16.c  base16.h  base64.c  base64.h  cp.c  cp.h  exe.c  exe.h  find-executables.c  find-executables.h  fs.c  fs.h  git-clone.c  git-pull.c  git.h  http.c  http.h  log.h  mkdir_p.c  mkdir_p.h  rm-r.c  rm-r.h  self.c  self.h  sha256sum.c  sha256sum.h  sysinfo.c  sysinfo.h  tar.c  tar.h  untar.c  untar.h  url-transform.c  url-transform.h  url.c  url.h  util.c  util.h  zlib-flate.c  zlib-flate.h
src/core/regex/: pcre2.c  posix.c  regex.h
src/openssl/1/: sha256sum.c
src/openssl/3/: sha256sum.c
zsh-completion/: _ppkg  _zpkg
